# MatESP32_18x11x2

./: .gitignore  Processing 설치가이드(2023-11-14).txt
krri-16x20x2-alpha/ESP32_S3_KRRI_Master/: lib_gpio.h  (+2 more)
krri-16x20x3-alpha/: krri-16x20x3-alpha-a0.before2port.rar
prj23-grib-ble/: TODO-prj23-grib-ble.txt
prj24-luxtep-MAT_V2/pio_Luxtep_02a/: CMakeLists.txt  ReadVersion.txt  pio_Luxtep_02a-main.code-workspace  platformio.ini
prj24-luxtep-MAT_V2/pio_Luxtep_02a/..backup/: libCopWorks.h_x  strip_example.h_x
prj24-luxtep-MAT_V2/pio_Luxtep_02a/..log/: 250322-1117-mini.txt  250322-1117.txt
prj24-luxtep-MAT_V2/pio_Luxtep_02a/components/btwifi-gateway/: lib_ota.h  lib_wifiConfig.h
prj24-luxtep-MAT_V2/pio_Luxtep_02a/components/driver_28x35/: commPacket.h  configPins-mdll-24-6822.h  libBalanceWorks.h  libCopWorks.cpp  lib_buzzer.h  lib_gpio.h  lib_ledWorks_28x35.h  lib_wdtimer.h  lib_wdtimer.h_v3  strip_example.cpp
prj24-luxtep-MAT_V2/pio_Luxtep_02a/components/network/: lib_tcpClient.h  network_task.h
prj24-luxtep-MAT_V2/pio_Luxtep_02a/components/protocol_uart/: groupAppCommand.h  groupDeviceIO.h  groupOSDCommand.h  groupSensorData.h  libPrintRaw.h  libProtocol.h  packetBuffer.h
prj24-luxtep-MAT_V2/pio_Luxtep_02a/flowchart/: project_flowchart.mmd  server-statemachine.mmd
prj24-luxtep-MAT_V2/pio_Luxtep_02a/src/: main.cpp
prj24-luxtep-MAT_V2/pio_Luxtep_02a/test/: TEST_color_conversion_force2rgb_250522.txt  TEST_osd_send_part_250522.txt
prj24-luxtep-MAT_V3/: IMPROVEMENTS.md  README.md  RequirementsHistory.md  readme2.md
prj25-espidf-examples/: ReadVersion.txt
(+261 files in other folders)
